# decharge-evolution_anons

./: .gitignore  Anchor.toml  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  refresh-linter.sh  test-services.sh  tsconfig.base.json  tsconfig.json  turbo.json
apps/web-app/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web-app/app/: globals.css  layout.tsx  page.tsx
apps/web-app/components/: activity-feed.tsx  animated-counter.tsx  live-session-table.tsx  marketplace-grid.tsx  metric-card.tsx  solana-pay-button.tsx  use-gateway-data.ts  wallet-provider.tsx  world-viewport.tsx
apps/web-app/components/world/: charger-installer.tsx  charger-models.tsx  earnings-tracker.tsx  interactive-plot.tsx  plot-details-panel.tsx  world-effects.tsx  world-scene-wrapper.tsx
apps/web-app/hooks/: use-claim-plot.ts  use-plot-selection.ts
apps/web-app/lib/: gateway-store.ts  solana-pay.ts
docs/: FEATURES.md  OVERVIEW.md  REPOSITORY.md  SETUP.md  architecture.md
programs/decharge/: Cargo.toml
programs/decharge/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/decharge/src/instructions/: mod.rs
services/gateway/: package.json  tsconfig.json
services/gateway/src/: index.ts
simulator/: package.json  tsconfig.json
simulator/src/: index.ts
