[workspace]
members = [
  "programs/decharge"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-spl = "=0.30.1"
bytemuck = "1.16.0"
solana-program = "1.18.15"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
