[package]
name = "decharge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "decharge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
test-sbf = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
bytemuck.workspace = true
solana-program.workspace = true
